@@ -13,7 +13,8 @@ import java.io.IOException;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
 import java.net.ProtocolException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.util.Base64;
 
@@ -132,8 +133,8 @@ public class FingerprintingClient implements FingerPrintingDataSource {
 	}
 
 	private <T> HttpURLConnection send(T parameter, Class<T> tClass, String requestPath, String requestMethod)
-			throws MalformedURLException, IOException, ProtocolException, JAXBException {
-		HttpURLConnection connection = (HttpURLConnection) new URL(url + requestPath).openConnection();
+			throws MalformedURLException, IOException, ProtocolException, JAXBException, URISyntaxException {
+		HttpURLConnection connection = (HttpURLConnection) new URI(url + requestPath).toURL().openConnection();
 		connection.setConnectTimeout(connectionTimeout);
 		connection.setDoOutput(true);
 		connection.setInstanceFollowRedirects(false);
